--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <!--global container-->
     <div class="container mx-auto max-w-7xl p-2 md:p-10">
         <!--grid container-->
-        <div class="text-white">
+        <div class="grid gap-6 grid-cols-1 text-white md:grid-cols-4 md:grid-rows-2">
             <!--box 1-->
-            <div class="relative p-10 rounded-xl bg-purple-700">
+            <div class="relative p-10 rounded-xl bg-purple-700 md:col-span-2">
                 <!--quotes image-->
                 <img src="images/bg-pattern-quotation.svg" alt="" class="absolute top-3 right-10 scale-125 md:top-7 md:right-24 md:scale-150"/>
                 <!--header-->
@@ -51,10 +51,8 @@
             </div>
             <!--box 2-->
             <div class="p-10 rounded-xl bg-gray-600">
-                <!--quotes image-->
-                <img src="images/bg-pattern-quotation.svg" alt="" class="absolute top-3 right-10 scale-125 md:top-7 md:right-24 md:scale-150"/>
                 <!--header-->
-                <div class="flex z-10 space-x-4">
+                <div class="flex space-x-4">
                     <img src="images/image-jonathan.jpg" alt="" class="w-10 h-10 rounded-full ring-2 ring-purple-300"/>
                     <div class="text-sm">
                         <h4 class="opacity-90">Jonathan Walters</h4>
@@ -79,11 +77,9 @@
                 </p>
             </div>
             <!--box 3-->
-            <div class="hidden p-10 rounded-xl text-gray-900 bg-white">
-                <!--quotes image-->
-                <img src="images/bg-pattern-quotation.svg" alt="" class="absolute top-3 right-10 scale-125 md:top-7 md:right-24 md:scale-150"/>
+            <div class="hidden p-10 rounded-xl text-gray-900 bg-white md:block md:row-span-2">
                 <!--header-->
-                <div class="flex z-10 space-x-4">
+                <div class="flex space-x-4">
                     <img src="images/image-kira.jpg" alt="" class="w-10 h-10 rounded-full ring-2 ring-purple-300"/>
                     <div class="text-sm">
                         <h4 class="opacity-90">Kira Whittle</h4>
@@ -112,10 +108,8 @@
             </div>
             <!--box 4-->
             <div class="p-10 rounded-xl text-gray-900 bg-white">
-                <!--quotes image-->
-                <img src="images/bg-pattern-quotation.svg" alt="" class="absolute top-3 right-10 scale-125 md:top-7 md:right-24 md:scale-150"/>
                 <!--header-->
-                <div class="flex z-10 space-x-4">
+                <div class="flex space-x-4">
                     <img src="images/image-jeanette.jpg" alt="" class="w-10 h-10 rounded-full ring-2 ring-purple-300"/>
                     <div class="text-sm">
                         <h4 class="opacity-90">Jeanette Harmon</h4>
@@ -133,11 +127,9 @@
                 </p>
             </div>
             <!--box 5-->
-            <div class="p-10 rounded-xl bg-gray-900">
-                <!--quotes image-->
-                <img src="images/bg-pattern-quotation.svg" alt="" class="absolute top-3 right-10 scale-125 md:top-7 md:right-24 md:scale-150"/>
+            <div class="p-10 rounded-xl bg-gray-900 md:col-span-2">
                 <!--header-->
-                <div class="flex z-10 space-x-4">
+                <div class="flex space-x-4">
                     <img src="images/image-patrick.jpg" alt="" class="w-10 h-10 rounded-full ring-2 ring-purple-300"/>
                     <div class="text-sm">
                         <h4 class="opacity-90">Patrick Abrams</h4>
@@ -161,11 +153,9 @@
                 </p>
             </div>
             <!--box 6-->
-            <div class="p-10 rounded-xl text-gray-900 bg-white">
-                <!--quotes image-->
-                <img src="images/bg-pattern-quotation.svg" alt="" class="absolute top-3 right-10 scale-125 md:top-7 md:right-24 md:scale-150"/>
+            <div class="p-10 rounded-xl text-gray-900 bg-white md:hidden">
                 <!--header-->
-                <div class="flex z-10 space-x-4">
+                <div class="flex space-x-4">
                     <img src="images/image-kira.jpg" alt="" class="w-10 h-10 rounded-full ring-2 ring-purple-300"/>
                     <div class="text-sm">
                         <h4 class="opacity-90">Kira Whittle</h4>
