--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     got every penny's worth.
                 </p>
                 <!--small text-->
-                <p class="mt-6 opacity-50">
+                <p class="mt-6 opacity-50 line-clamp-6">
                     "I was an EMT for many years before I joined the bootcamp. I've been
                     looking to make a transition and have heard some people who had an
                     amazing experience here. I signed up for the free intro course and
@@ -64,7 +64,7 @@
                     The team was very supportive and kept me motivated.
                 </p>
                 <!--small text-->
-                <p class="mt-6 opacity-50">
+                <p class="mt-6 opacity-50 line-clamp-5">
                     "I started as a total newbie with virtually no coding skills. I now
                     work as a mobile engineer for a big company. This was one of the
                     best investments I've made in myself. Lorem ipsum dolor sit amet
